--- a/client/src/Components/Chat/Message.module.scss
+++ b/client/src/Components/Chat/Message.module.scss
@@ -1,20 +1,19 @@
 .mine {
-    display: block;
+    display: inline-block;
+    padding: 0 20px;
     text-align: left;
-    padding: 10px 50px;
+    line-height: 1;
     background-color: #f2f2f2;
-    max-width: 150px;
+    max-width: 400px;
     border-radius: 15px;
-    margin-left: auto;
-    margin-right: 50px;
+    margin: 10px 50px 10px auto;
 }
 .others {
-    display: block;
+    display: inline-block;
+    padding: 0 20px;
     text-align: left;
-    padding: 10px 50px;
     background-color: rgba(92, 131, 214, 0.25);
-    max-width: 150px;
+    max-width: 400px;
     border-radius: 15px;
-    margin-right: auto;
-    margin-left: 50px;
+    margin: 10px auto 10px 50px;
 }
