--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+*, *::before, *::after  {
+	box-sizing: border-box;
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -12,4 +16,6 @@ code {
 .messagesContainer {
 	max-width: 500px;
 	margin: auto;
+	display: flex;
+	flex-direction: column-reverse;
 }
