--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,9 +13,6 @@ code {
   	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.messagesContainer {
-	max-width: 500px;
-	margin: auto;
-	display: flex;
-	flex-direction: column-reverse;
+body {
+	min-height: 85vh;
 }
