--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -1,32 +1,30 @@
-.App {
-  	text-align: center;
-}
+@import './assets/variables';
 
-.AppLogo {
-	height: 50px;
-	pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.AppLogo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-.AppHeader {
-	background-color: #282c34;
+// Header
+.Header {
 	height: 100%;
-	min-height: 10vh;
+	min-height: 80px;
+	position: relative;
+	z-index: 2;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: flex-start;
+	background-color: $primary_dark_color;
 	font-size: 12px;
-	color: white;
+	color: $primary_light_color;
+	box-shadow: 0px 5px 61px 0px rgba(20,33,61,0.5);
+	.Logo {
+		height: 50px;
+		pointer-events: none;
+	}
 }
 
-.AppLink {
-  	color: #61dafb;
+
+@media (prefers-reduced-motion: no-preference) {
+	.Logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 @keyframes App-logo-spin {
@@ -38,6 +36,17 @@
 	}
 }
 
-.Body {
-	min-height: 85vh;
+// Main
+.Main {
+	height: 100%;
+	min-height: calc(100vh - 120px);
+	background-color: $primary_dark_color;
+}
+
+// Footer
+.Footer {
+	height: 40px;
+	position: relative;
+	z-index: 2;
+	background-color: $accent_color;
 }
