--- a/client/src/Components/Chat/Message.module.scss
+++ b/client/src/Components/Chat/Message.module.scss
@@ -1,6 +1,6 @@
 .mine {
     display: inline-block;
-    padding: 0 20px;
+    padding: 10px 20px;
     text-align: left;
     line-height: 1;
     background-color: #f2f2f2;
@@ -10,7 +10,7 @@
 }
 .others {
     display: inline-block;
-    padding: 0 20px;
+    padding: 10px 20px;
     text-align: left;
     background-color: rgba(92, 131, 214, 0.25);
     max-width: 400px;
