--- a/client/src/Components/Chat/Chat.module.scss
+++ b/client/src/Components/Chat/Chat.module.scss
@@ -7,7 +7,7 @@
     flex-direction: column-reverse;
     overflow-y: auto;
     border-radius: 12px;
-    border: 2px solid $accent_color;
+    border: 2px solid $secondary_dark_color;
 }
 .textInput {
     width: 100%;
