--- a/client/src/Components/Chat/Input.module.scss
+++ b/client/src/Components/Chat/Input.module.scss
@@ -3,10 +3,34 @@
     margin: 10px 0;
 }
 .Input {
-    width: 75%;
+    width: calc(100% - 52px);
+    margin-right: 10px;
     min-height: 40px;
+    border-radius: 20px;
+    border: 2px solid #eeeef6;
+    padding: 0 20px;
+    &:active, &:focus {
+        outline: none;
+        border: 2px solid #313ba7;
+    }
 }
 .Button {
-    width: 25%;
+    all: unset;
+    height: 42px;
+    width: 42px;
+    border-radius: 50%;
+    background-color: #eeeef6;
     min-height: 40px;
+    color: #000;
+    transition: all 0.3s ease-out;
+    i {
+        padding-left: 12px;
+        padding-bottom: 4px;
+    }
+    &:hover {
+        box-shadow: 0 0 3px #313ba7;
+        background-color: #313ba7;
+        min-height: 40px;
+        color: #fff;    
+    }
 }
