--- a/client/src/assets/_variables.scss
+++ b/client/src/assets/_variables.scss
@@ -1,3 +1,10 @@
+// FONTS
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&family=Source+Sans+Pro:wght@300;400;600&display=swap');
+
+// font-family: 'Montserrat', sans-serif;
+// font-family: 'Source Sans Pro', sans-serif;
+
+
 // COLORS
 
 $primary_dark_color: #050A10;
