--- a/client/src/index.module.scss
+++ b/client/src/index.module.scss
@@ -1,3 +1,5 @@
+@import './assets/variables';
+
 *, *::before, *::after  {
 	box-sizing: border-box;
 	margin: 0;
@@ -7,7 +9,7 @@
 body {
 	overflow-x: hidden;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
