--- a/client/src/routes/Auth/Auth.module.scss
+++ b/client/src/routes/Auth/Auth.module.scss
@@ -1,9 +1,47 @@
 //@import '../../assets/variables';
 
+.Header {
+    max-height: 120px;
+    display: flex;
+    background-color: #000;
+    align-items: center;
+}
+
 .Auth {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+h1 {
+    color: #fff;
+}
+
+.Logo {
+    margin: 10px;
+    height: 60px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+	.Logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
+}
+
+@keyframes App-logo-spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.Footer {
+	height: 40px;
+	position: relative;
+	z-index: 2;
+	// background-color: red;
 }
