--- a/client/src/Components/Chat/Message/Message.module.scss
+++ b/client/src/Components/Chat/Message/Message.module.scss
@@ -3,7 +3,7 @@
 .message {
     position: relative;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 1rem 2rem;
     text-align: left;
     line-height: 1.2;
     color: #fff;
@@ -19,23 +19,23 @@
 
 .user {
     background-color: #eeeef6;
-    border-radius: 15px 15px 0 15px; 
-    margin: 10px 20px 10px auto;
+    border-radius: 1.5rem 1.5rem 0 1.5rem; 
+    margin: 1rem 2rem 1rem auto;
     color: #000;
     &:before {
-        border-bottom: 8px solid #eeeef6;
-        border-right: 10px solid transparent;
-        right: -10px;
+        border-bottom: 0.8rem solid #eeeef6;
+        border-right: 1rem solid transparent;
+        right: -1rem;
     }
 }
 
 .others {
     background-color: #313ba7;
-    border-radius: 15px 15px 15px 0; 
-    margin: 10px auto 10px 20px;
+    border-radius: 1.5rem 1.5rem 1.5rem 0; 
+    margin: 1rem auto 1rem 2rem;
     &:before {
-        border-bottom: 8px solid #313ba7;
-        border-left: 10px solid transparent;
-        left: -10px;
+        border-bottom: 0.8rem solid #313ba7;
+        border-left: 1rem solid transparent;
+        left: -1rem;
     }
 }
