--- a/client/src/Components/SignIn/SignIn.module.scss
+++ b/client/src/Components/SignIn/SignIn.module.scss
@@ -3,13 +3,28 @@
 .SignInCtn {
     display: flex;
     flex-direction: column;
-    padding: 50px;
-    border-radius: 20px;
-    margin: 100px auto;
+    padding: 5rem;
+    border-radius: 2rem;
+    margin: 10rem auto;
     background-color: $primary_light_color;
     // border: 2px solid $accent_color;
     input {
-        margin: 10px 0;
-        padding: 5px;
+        display: block;
+        margin: 0.5rem 0 1rem 0;
+        border-radius: 0.6rem;
+        border: 2px solid #000;
+        min-height: 3.5rem;
+        padding: 0.5rem;
+        width: 100%;
+        &[type='submit'] {
+            margin-top: 2rem;
+            border: 2px solid #D90429;
+            background-color: #D90429;
+            &:hover {
+                border: 2px solid #D90429;
+                background-color: transparent;    
+            }
+        }
     }
 }
+// 1 rem = 16
