--- a/client/src/index.module.scss
+++ b/client/src/index.module.scss
@@ -6,9 +6,14 @@
 	padding: 0;
 }
 
+html {
+	font-size: 62.5%;
+}
+
 body {
 	overflow-x: hidden;
 	margin: 0;
+	font-size: 1.6rem;
 	font-family: 'Source Sans Pro', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
