--- a/client/src/routes/Layout/Layout.module.scss
+++ b/client/src/routes/Layout/Layout.module.scss
@@ -9,17 +9,17 @@
         height: 100vh;
         overflow-y: auto;
         position: relative;
-        padding: 20px 0;
+        padding: 2rem 0;
         min-width: 20vw;
         .title {
             display: flex;
             align-items: center;
-            margin: 10px 15px 20px 15px;
+            margin: 1rem 1.5rem 2rem 1.5rem;
             .search {
                 all: unset;
                 cursor: pointer;
-                height: 30px;
-                width: 30px;
+                height: 3rem;
+                width: 3rem;
                 border-radius: 50%;
                 background-color: #e1e1e1;
                 color: #b5b5b5;
@@ -28,14 +28,14 @@
             }
         }
         h3 {
-            margin: 10px 15px;
+            margin: 1rem 1.5rem;
         }
         .emptyChats {
-            margin: 5px 20px 25px 15px;
+            margin: 0.5rem 2rem 2.5rem 1.5rem;
             display: flex;
             color: #9f9f9f;
             i {
-                margin-left: 20px;
+                margin-left: 2rem;
             }
         }
         ul {
@@ -48,11 +48,11 @@
                     width: 100%;
                     color: #000;
                     text-decoration: none;
-                    padding: 20px 15px;
+                    padding: 2rem 1.5rem;
                     &:hover,  &.active {
                         background: rgba(49, 59, 167, 0.2);
                         background: linear-gradient(90deg, rgba(49, 59, 167, 0.2) 0%, rgba(217,4,41,0) 100%);
-                        padding-left: 13px;
+                        padding-left: 1.3rem;
                         border-left: 2px solid rgba(49, 59, 167, 0.2);    
                     }
                     &.active {
@@ -63,27 +63,27 @@
                     }
                     .chatContent {
                         width: 100%;
-                        padding: 0 10px;
+                        padding: 0 1rem;
                         display: block;
                         .chatTitle {
                             font-family: 'Montserrat', sans-serif;
-                            margin-bottom: 5px;
+                            margin-bottom: 0.5rem;
                             display: flex;
                             align-items: flex-end;
-                            font-size: 14px;
+                            font-size: 1.4rem;
                             font-weight: 500;
                             .chatTime {
                                 font-family: 'Source Sans Pro', sans-serif;
-                                padding-bottom: 2px;
+                                padding-bottom: 0.2rem;
                                 display: inline-block;
-                                font-size: 12px;
+                                font-size: 1.2rem;
                                 text-align: right;
                                 margin-left: auto;
                                 color: #313ba7;
                             }
                         }
                         .chatMessage {
-                            font-size: 14px;
+                            font-size: 1.4rem;
                             font-weight: 300;
                             color: #313ba7;
                         }
@@ -94,16 +94,16 @@
         .addChat {
             all: unset;
             cursor: pointer;
-            height: 40px;
-            width: 40px;
+            height: 4rem;
+            width: 4rem;
             border-radius: 50%;
             background-color: #D90429;
-            min-height: 40px;
+            min-height: 4rem;
             color: #fff;
             text-align: center;
             position: absolute;
-            bottom: 70px;
-            right: 20px;
+            bottom: 7rem;
+            right: 2rem;
             transition: all 0.3s ease-out;
             &:hover {
                 box-shadow: 0 0 3px #D90429;
@@ -112,7 +112,7 @@
     }
     .ChatContainer {
         background-color: #fff;
-        padding: 20px;
+        padding: 2rem;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -123,8 +123,8 @@
 
 // Header
 .Header {
-    margin: 15px 0 15px 15px;
-    padding: 10px 0;
+    margin: 1.5rem 0 1.5rem 1.5rem;
+    padding: 1rem 0;
 	position: relative;
 	z-index: 2;
 	display: flex;
@@ -132,11 +132,11 @@
 	align-items: center;
 	justify-content: flex-start;
 	background-color: #313ba7;
-    font-size: 12px;
-    border-radius: 20px;
+    font-size: 1.2rem;
+    border-radius: 2rem;
 	color: $primary_dark_color;
 	.Logo {
-		height: 50px;
+		height: 5rem;
 		pointer-events: none;
     }
     nav {
@@ -144,10 +144,10 @@
         ul {
             list-style: none;
             i {
-                margin: 10px 0;
-                padding: 10px;
-                font-size: 20px;
-                border-radius: 10px;
+                margin: 1rem 0;
+                padding: 1rem;
+                font-size: 2rem;
+                border-radius: 1rem;
                 color: #fff;
                 &:hover{
                     background-color: rgba(255, 255, 255, 0.1);
