--- a/client/src/Components/SignIn/SignIn.module.scss
+++ b/client/src/Components/SignIn/SignIn.module.scss
@@ -16,6 +16,10 @@
         min-height: 3.5rem;
         padding: 0.5rem;
         width: 100%;
+        font-size: 1.4rem;
+        &::placeholder {
+            font-size: 1.4rem;
+        }
         &[type='submit'] {
             margin-top: 2rem;
             border: 2px solid #D90429;
