--- a/client/src/routes/Layout/Layout.module.scss
+++ b/client/src/routes/Layout/Layout.module.scss
@@ -4,7 +4,6 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    background-color: #eeeef6;
     .Nav {
         height: 100vh;
         overflow-y: auto;
@@ -46,7 +45,7 @@
                     align-items: center;
                     justify-content: flex-start;
                     width: 100%;
-                    color: #000;
+                    color: var(--color);
                     text-decoration: none;
                     padding: 2rem 1.5rem;
                     &:hover,  &.active {
@@ -85,7 +84,7 @@
                         .chatMessage {
                             font-size: 1.4rem;
                             font-weight: 300;
-                            color: #313ba7;
+                            color: var(--color);
                         }
                     }
                 }
@@ -111,7 +110,6 @@
         }
     }
     .ChatContainer {
-        background-color: #fff;
         padding: 2rem;
         width: 100%;
         display: flex;
