--- a/client/src/assets/_variables.scss
+++ b/client/src/assets/_variables.scss
@@ -7,11 +7,12 @@
 
 // COLORS
 $primary_dark_color: #050A10;
-$secondary_dark_color: #14213D;
-$primary_light_color: #E5E5E5;
-$secondary_light_color: #FFFFFF;
-$accent_color: #FCA311;
-$error_color: #D90429;
+// $secondary_dark_color: #14213D;
+$primary_light_color: #eeeef6;
+// $secondary_light_color: #FFFFFF;
+$accent_color: #D90429;
+$secondary_accent_color: #313ba7;
+// $warning_color: #FCA311;
 
 // BREAKPOINTS (>=)
 $extra_large_breakpoint: 1200px;
