--- a/client/src/Components/Chat/MessageInputGroup/MessageInputGroup.module.scss
+++ b/client/src/Components/Chat/MessageInputGroup/MessageInputGroup.module.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/variables';
+
 .Form {
     width: 100%;
     margin: 1rem 0;
@@ -7,11 +9,11 @@
     margin-right: 1rem;
     min-height: 4rem;
     border-radius: 2rem;
-    border: 2px solid #eeeef6;
+    border: 2px solid $primary_light_color;
     padding: 0 2rem;
     &:active, &:focus {
         outline: none;
-        border: 2px solid #313ba7;
+        border: 2px solid $secondary_accent_color;
     }
 }
 .Button {
@@ -19,18 +21,18 @@
     height: 4.2rem;
     width: 4.2rem;
     border-radius: 50%;
-    background-color: #eeeef6;
+    background-color: $primary_light_color;
     min-height: 4rem;
-    color: #000;
+    color: $primary_dark_color;
     transition: all 0.3s ease-out;
     i {
         padding-left: 1.2rem;
         padding-bottom: 0.4rem;
     }
     &:hover {
-        box-shadow: 0 0 3px #313ba7;
-        background-color: #313ba7;
+        box-shadow: 0 0 3px $secondary_accent_color;
+        background-color: $secondary_accent_color;
         min-height: 4rem;
-        color: #fff;    
+        color: $primary_light_color;    
     }
 }
