--- a/client/src/Components/SignIn/SignIn.module.scss
+++ b/client/src/Components/SignIn/SignIn.module.scss
@@ -12,7 +12,7 @@
         display: block;
         margin: 0.5rem 0 1rem 0;
         border-radius: 0.6rem;
-        border: 2px solid #000;
+        border: 2px solid $primary_dark_color;
         min-height: 3.5rem;
         padding: 0.5rem;
         width: 100%;
@@ -22,10 +22,10 @@
         }
         &[type='submit'] {
             margin-top: 2rem;
-            border: 2px solid #D90429;
-            background-color: #D90429;
+            border: 2px solid $accent_color;
+            background-color: $accent_color;
             &:hover {
-                border: 2px solid #D90429;
+                border: 2px solid $accent_color;
                 background-color: transparent;    
             }
         }
