--- a/client/src/routes/Layout/Layout.module.scss
+++ b/client/src/routes/Layout/Layout.module.scss
@@ -58,6 +58,8 @@
                         border-left: 2px solid $accent_color;    
                     }
                     .chatImage {
+                        width: 40px;
+                        height: 40px;
                         border-radius: 50%;
                     }
                     .chatContent {
