--- a/client/src/index.module.scss
+++ b/client/src/index.module.scss
@@ -27,7 +27,6 @@ html[data-theme='dark'] {
 	--backgroundColor: #050A10;
 	--secondaryBackgroundColor: #001836;
 	--color: #FFFFFF;
-
 }
 
 
@@ -42,6 +41,10 @@ body {
 	margin: 0;
 	min-height: 100vh;
 	overflow-x: hidden;
+}
+
+button {
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 code {
