--- a/client/src/Components/SignIn/SignIn.module.scss
+++ b/client/src/Components/SignIn/SignIn.module.scss
@@ -1,13 +1,14 @@
 @import '../../assets/variables';
 
 .SignInCtn {
-    display: flex;
-    flex-direction: column;
-    padding: 5rem;
-    border-radius: 2rem;
-    margin: 10rem auto;
     background-color: $primary_light_color;
     // border: 2px solid $accent_color;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    margin: 10rem auto;
+    padding: 5rem;
+    position: relative;
     input {
         display: block;
         margin: 0.5rem 0 1rem 0;
@@ -31,4 +32,60 @@
         }
     }
 }
-// 1 rem = 16
+
+.SignInCtn .Loader {
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .3s;
+}
+
+// LOADING SCREEN
+.Loading {
+    opacity: 0.8;
+    transition: opacity .3s;
+}
+
+// LOADER
+.Loading .Loader,
+.Loading .Loader:after {
+    border-radius: 50%;
+    height: 10rem;
+    width: 10rem;
+}
+
+.Loading .Loader {
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-left: 1.1em solid $accent_color;
+    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+    font-size: 1rem;
+    left: calc(50% - 5rem);
+    opacity: 1;
+    pointer-events: unset;
+    position: absolute;
+    top: calc(50% - 5rem);
+}
+
+@-webkit-keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
